working on the 'latest products' section

--- a/index.html
+++ b/index.html
@@ -34,15 +34,24 @@
       <main>
         <div class="grid-promo">
           <img class="promo-banner" src="images/savageStrikeBanner.jpg" alt="savageStrike">
-          <div class="latest-news">
-            <div class="spot">
-              <img class="news-image" src="images/pendulum.jpg" alt="image">
+          <img class="news-image-1" src="images/pendulum.jpg" alt="image">
+          <img class="news-image-2" src="images/UDS_medbanner.png" alt="image">
+          <img class="news-image-3" src="images/DL_Tyranno.png" alt="image">
+        </div>
+        <div>
+          <h3>Latest Products</h3>
+          <div class="latest-products">
+            <div class="product">
+              <img src="images/savage-striker-pack.png" alt="product">
             </div>
-            <div class="spot">
-              <img class="news-image" src="images/DL_Tyranno.png" alt="image">
+            <div class="product">
+              <img src="images/tins-2018.png" alt="product">
             </div>
-            <div class="spot">
-              <img class="news-image" src="images/UDS_medbanner.png" alt="image">
+            <div class="product">
+              <img src="images/soulburner.png" alt="product">
+            </div>
+            <div class="product">
+              <img src="images/SpeedDuelists_lrg.png" alt="product">
             </div>
           </div>
         </div>
