updated product section

--- a/index.html
+++ b/index.html
@@ -32,29 +32,35 @@
       </header>
 
       <main>
-        <div class="grid-promo">
-          <img class="promo-banner" src="images/savageStrikeBanner.jpg" alt="savageStrike">
-          <img class="news-image-1" src="images/pendulum.jpg" alt="image">
-          <img class="news-image-2" src="images/UDS_medbanner.png" alt="image">
-          <img class="news-image-3" src="images/DL_Tyranno.png" alt="image">
-        </div>
-        <div>
+        <section id="promo">
+          <div class="grid-promo">
+            <a class="promo-banner promo-image" href="#"><img class="promo-image" src="images/savageStrikeBanner.jpg" alt="savageStrike"></a>
+            <a class="news-image-1 promo-image" href="#"><img class="promo-image" src="images/pendulum.jpg" alt="image"></a>
+            <a class="news-image-2 promo-image"  href="#"><img class="promo-image" src="images/UDS_medbanner.png" alt="image"></a>
+            <a class="news-image-3 promo-image" href="#"><img class="promo-image" src="images/DL_Tyranno.png" alt="image"></a>
+          </div>
+        </section>
+
+        <section id="products">
           <h3>Latest Products</h3>
           <div class="latest-products">
-            <div class="product">
+            <div class="new-product">
               <img src="images/savage-striker-pack.png" alt="product">
             </div>
-            <div class="product">
+            <div class="new-product">
               <img src="images/tins-2018.png" alt="product">
             </div>
-            <div class="product">
+            <div class="new-product">
               <img src="images/soulburner.png" alt="product">
             </div>
-            <div class="product">
+            <div class="new-product">
               <img src="images/SpeedDuelists_lrg.png" alt="product">
             </div>
+            <div class="new-product">
+
+            </div>
           </div>
-        </div>
+        </section>
       </main>
 
 
