first draft of site

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
             <li><a href="#">Products</a></li>
             <li><a href="#">Gameplay</a></li>
             <li><a href="#">Events</a></li>
+            <li><a href="#">News</a></li>
             <li><a href="#">Duel Links</a></li>
           </ul>
         </nav>
@@ -45,23 +46,38 @@
           <h3>Latest Products</h3>
           <div class="latest-products">
             <div class="new-product">
-              <img src="images/savage-striker-pack.png" alt="product">
+              <a class="promo-image" href="#"><img src="images/savage-striker-pack.png" alt="product"></a>
             </div>
             <div class="new-product">
-              <img src="images/tins-2018.png" alt="product">
+              <a class="promo-image" href="#"><img src="images/tins-2018.png" alt="product"></a>
             </div>
             <div class="new-product">
-              <img src="images/soulburner.png" alt="product">
+              <a class="promo-image" href="#"><img src="images/soulburner.png" alt="product"></a>
             </div>
             <div class="new-product">
-              <img src="images/SpeedDuelists_lrg.png" alt="product">
+              <a class="promo-image" href="#"><img src="images/SpeedDuelists_lrg.png" alt="product"></a>
             </div>
             <div class="new-product">
-
+              <a id="click-more" href="#"><h4>See More</h4></a>
             </div>
           </div>
         </section>
       </main>
+
+      <footer>
+        <div id="social-media">
+          <p>Follow: </p>
+          <i class="fab fa-facebook fa-2x"></i>
+          <i class="fab fa-instagram fa-2x"></i>
+          <i class="fab fa-twitter fa-2x"></i>
+        </div>
+        <div id="copyright">
+          <img class="credit-copyright" src="images/copyright.gif" alt="">
+        </div>
+        <div id="company-logo" >
+          <img class="credit-logo" src="images/konami.png" alt="konami-logo">
+        </div>
+      </footer>
 
 
 
