fixed the footer

--- a/index.html
+++ b/index.html
@@ -66,13 +66,14 @@
 
       <footer>
         <div id="social-media">
-          <p>Follow: </p>
+          <p>Follow Us: </p>
           <i class="fab fa-facebook fa-2x"></i>
           <i class="fab fa-instagram fa-2x"></i>
           <i class="fab fa-twitter fa-2x"></i>
         </div>
         <div id="copyright">
-          <img class="credit-copyright" src="images/copyright.gif" alt="">
+          <p>©1996 KAZUKI TAKAHASHI</p>
+          <p>©2017 NAS • TV TOKYO</p>
         </div>
         <div id="company-logo" >
           <img class="credit-logo" src="images/konami.png" alt="konami-logo">
