whenever you hover over the product images, it shows the product info

--- a/index.html
+++ b/index.html
@@ -46,16 +46,41 @@
           <h3>Latest Products</h3>
           <div class="latest-products">
             <div class="new-product">
-              <a class="promo-image" href="#"><img src="images/savage-striker-pack.png" alt="product"></a>
+              <img class="promo-image" src="images/savage-striker-pack.png" alt="product">
+              <div class="text-container">
+                <div class="text">Heat things up this winter with Savage Strike, the
+                  first 100-card booster set of 2019! Cybernetic Horizon revitalized Ritual Summoning,
+                  and Soul Fusion created powerful Fusion Summoning strategies.
+                </div>
+                <a href="#"><button class="learn-more" type="button" name="button">Learn More</button></a>
+              </div>
             </div>
             <div class="new-product">
-              <a class="promo-image" href="#"><img src="images/tins-2018.png" alt="product"></a>
+              <img class="promo-image" src="images/tins-2018.png" alt="product">
+              <div class="text-container">
+                <div class="text">The 2018 Mega-Tins bring the heat this Summer with some of the past year’s most
+                  popular cards AND brand-new cards designed specifically for these Tins!
+                </div>
+                <a href="#"><button class="learn-more" type="button" name="button">Learn More</button></a>
+              </div>
             </div>
             <div class="new-product">
-              <a class="promo-image" href="#"><img src="images/soulburner.png" alt="product"></a>
+              <img class="promo-image" src="images/soulburner.png" alt="product">
+              <div class="text-container">
+                <div class="text">Straight from the animated series to real life, Soulburner's Salamangreat Deck from Yu-Gi-Oh!
+                  VRAINS offers monsters a new lease on life with its "reincarnation" strategy!
+                </div>
+                <a href="#"><button class="learn-more" type="button" name="button">Learn More</button></a>
+              </div>
             </div>
             <div class="new-product">
-              <a class="promo-image" href="#"><img src="images/SpeedDuelists_lrg.png" alt="product"></a>
+              <img class="promo-image" src="images/SpeedDuelists_lrg.png" alt="product">
+              <div class="text-container">
+                <div class="text">Following the hugely successful Yu-Gi-Oh! Duel Links Mobile Game, Speed Dueling
+                  will now be supported as a brand-new way to play the physical card game!
+                </div>
+                <a href="#"><button class="learn-more" type="button" name="button">Learn More</button></a>
+              </div>
             </div>
             <div class="new-product">
               <a id="click-more" href="#"><h4>See More</h4></a>
