navbar has hover dropdown feature

--- a/index.html
+++ b/index.html
@@ -15,12 +15,54 @@
         <a href="index.html"><img class="logo" src="images/yugiohlogo.png" alt="logo"></a>
         <nav>
           <ul>
-            <li><a href="#">About</a></li>
-            <li><a href="#">Products</a></li>
-            <li><a href="#">Gameplay</a></li>
-            <li><a href="#">Events</a></li>
+            <li class="nav-container"><a href="#">About</a>
+              <div class="dropdown-content">
+                <a href="#">New to Yu-Gi-Oh!</a>
+                <a href="#">Info. for Parents</a>
+                <a href="#">Glossary</a>
+                <a href="#">Press Release</a>
+              </div>
+            </li>
+            <li class="nav-container"><a href="#">Products</a>
+              <div class="dropdown-content">
+                <a href="#">Booster</a>
+                <a href="#">Special Deluxe Edition</a>
+                <a href="#">Starter Deck</a>
+                <a href="#">Structure Deck</a>
+                <a href="#">Tin</a>
+                <a href="#">Duelist Pack</a>
+                <a href="#">Accessories</a>
+                <a href="#">Others</a>
+              </div>
+            </li>
+            <li class="nav-container"><a href="#">Gameplay</a>
+              <div class="dropdown-content">
+                <a href="#">Rule Book</a>
+                <a href="#">Strategy Site</a>
+                <a href="#">Forbidden & Limited List</a>
+                <a href="#">Card Database</a>
+                <a href="#">Advanced Rules</a>
+                <a href="#">Complex Card Info.</a>
+                <a href="#">Learn to Duel Demo</a>
+              </div>
+            </li>
+            <li class="nav-container"><a href="#">Events</a>
+              <div class="dropdown-content">
+                <a href="#">Organized Play & Ranking</a>
+                <a href="#">Premier Events & Coverage</a>
+                <a href="#">Sneak Peek Events</a>
+                <a href="#">Alternate Tournament Formats</a>
+                <a href="#">Special Tournaments</a>
+                <a href="#">Ultimate Duelist Series</a>
+                <a href="#">Official Tournament Store Locator</a>
+                <a href="#">Judge Program</a>
+                <a href="#">For Parents</a>
+              </div>
+
+            </li>
             <li><a href="#">News</a></li>
-            <li><a href="#">Duel Links</a></li>
+            <!-- the duel links site is not my property -->
+            <li><a href="https://www.konami.com/yugioh/duel_links/en/">Duel Links</a></li>
           </ul>
         </nav>
         <div id="search-container">
@@ -46,7 +88,7 @@
           <h3>Latest Products</h3>
           <div class="latest-products">
             <div class="new-product">
-              <img class="promo-image" src="images/savage-striker-pack.png" alt="product">
+              <img class="product-image" src="images/savage-striker-pack.png" alt="product">
               <div class="text-container">
                 <div class="text">Heat things up this winter with Savage Strike, the
                   first 100-card booster set of 2019! Cybernetic Horizon revitalized Ritual Summoning,
@@ -56,7 +98,7 @@
               </div>
             </div>
             <div class="new-product">
-              <img class="promo-image" src="images/tins-2018.png" alt="product">
+              <img class="product-image"  src="images/tins-2018.png" alt="product">
               <div class="text-container">
                 <div class="text">The 2018 Mega-Tins bring the heat this Summer with some of the past year’s most
                   popular cards AND brand-new cards designed specifically for these Tins!
@@ -65,7 +107,7 @@
               </div>
             </div>
             <div class="new-product">
-              <img class="promo-image" src="images/soulburner.png" alt="product">
+              <img class="product-image"  src="images/soulburner.png" alt="product">
               <div class="text-container">
                 <div class="text">Straight from the animated series to real life, Soulburner's Salamangreat Deck from Yu-Gi-Oh!
                   VRAINS offers monsters a new lease on life with its "reincarnation" strategy!
@@ -74,7 +116,7 @@
               </div>
             </div>
             <div class="new-product">
-              <img class="promo-image" src="images/SpeedDuelists_lrg.png" alt="product">
+              <img class="product-image"  src="images/SpeedDuelists_lrg.png" alt="product">
               <div class="text-container">
                 <div class="text">Following the hugely successful Yu-Gi-Oh! Duel Links Mobile Game, Speed Dueling
                   will now be supported as a brand-new way to play the physical card game!
